pkg/crate/libzt/src/include/ZeroTierSockets.h


typedef enum {
    ZTS_ERR_OK = 0,
    ZTS_ERR_SOCKET = -1,
    ZTS_ERR_SERVICE = -2,
    ZTS_ERR_ARG = -3,
    ZTS_ERR_NO_RESULT = -4,
    ZTS_ERR_GENERAL = -5
} zts_error_t;
typedef void (*CppCallback)(void* msg);
struct zts_sockaddr_storage {
    uint8_t s2_len;
    zts_sa_family_t ss_family;
    char s2_data1[2];
    uint32_t s2_data2[3];
    uint32_t s2_data3[3];
};
typedef struct {
    uint64_t node_id;
    uint16_t port_primary;
    uint16_t port_secondary;
    uint16_t port_tertiary;
    uint8_t ver_major;
    uint8_t ver_minor;
    uint8_t ver_rev;
} zts_node_info_t;
typedef struct {
    uint64_t net_id;
    struct zts_sockaddr_storage addr;
} zts_addr_info_t;
typedef enum {
    ZTS_NETWORK_STATUS_REQUESTING_CONFIGURATION = 0,
    ZTS_NETWORK_STATUS_OK = 1,
    ZTS_NETWORK_STATUS_ACCESS_DENIED = 2,
    ZTS_NETWORK_STATUS_NOT_FOUND = 3,
    ZTS_NETWORK_STATUS_PORT_ERROR = 4,
    ZTS_NETWORK_STATUS_CLIENT_TOO_OLD = 5
} zts_network_status_t;
typedef enum {
    ZTS_NETWORK_TYPE_PRIVATE = 0,
    ZTS_NETWORK_TYPE_PUBLIC = 1
} zts_net_info_type_t;
typedef struct {
    struct zts_sockaddr_storage target;
    struct zts_sockaddr_storage via;
    uint16_t flags;
    uint16_t metric;
} zts_route_info_t;
typedef enum {
    ZTS_PEER_ROLE_LEAF = 0,
    ZTS_PEER_ROLE_MOON = 1,
    ZTS_PEER_ROLE_PLANET = 2
} zts_peer_role_t;
typedef struct {
    uint64_t net_id;
    uint64_t mac;
    char name[ZTS_MAX_NETWORK_SHORT_NAME_LENGTH + 1];
    zts_network_status_t status;
    zts_net_info_type_t type;
    unsigned int mtu;
    int dhcp;
    int bridge;
    int broadcast_enabled;
    int port_error;
    unsigned long netconf_rev;
    unsigned int assigned_addr_count;
    struct zts_sockaddr_storage assigned_addrs[ZTS_MAX_ASSIGNED_ADDRESSES];
    unsigned int route_count;
    zts_route_info_t routes[ZTS_MAX_NETWORK_ROUTES];
    unsigned int multicast_sub_count;
    struct {
        uint64_t mac; 
        uint32_t adi; 
    } multicast_subs[ZTS_MAX_MULTICAST_SUBSCRIPTIONS];
} zts_net_info_t;
typedef struct {
    struct zts_sockaddr_storage address;
    uint64_t last_tx;
    uint64_t last_rx;
    uint64_t trusted_path_id;
    float latency;
    float unused_0;
    float unused_1;
    float unused_2;
    float unused_3;
    float unused_4;
    uint64_t unused_5;
    uint64_t unused_6;
    float unused_7;
    char* ifname;
    int expired;
    int preferred;
} zts_path_t;
typedef struct {
    uint64_t peer_id;
    int ver_major;
    int ver_minor;
    int ver_rev;
    int latency;
    zts_peer_role_t role;
    unsigned int path_count;
    int unused_0;
    zts_path_t paths[ZTS_MAX_PEER_NETWORK_PATHS];
} zts_peer_info_t;
typedef struct {
    uint64_t net_id;
    uint64_t mac;
    int mtu;
} zts_netif_info_t;
typedef struct {
    int16_t event_code;
    zts_node_info_t* node;
    zts_net_info_t* network;
    zts_netif_info_t* netif;
    zts_route_info_t* route;
    zts_peer_info_t* peer;
    zts_addr_info_t* addr;
    void* cache;
    int len;
} zts_event_msg_t;
ZTS_API int ZTCALL zts_id_new(char* key, unsigned int* key_buf_len);
ZTS_API int ZTCALL zts_id_pair_is_valid(const char* key, unsigned int len);
ZTS_API int ZTCALL zts_init_from_storage(const char* path);
ZTS_API int ZTCALL zts_init_from_memory(const char* key, unsigned int len);
ZTS_API int ZTCALL zts_init_set_event_handler(PythonDirectorCallbackClass* callback);
ZTS_API int ZTCALL zts_init_set_event_handler(CppCallback callback);
int zts_init_set_event_handler(jobject obj_ref, jmethodID id);
ZTS_API int ZTCALL zts_init_set_event_handler(void (*callback)(void*));
ZTS_API int ZTCALL zts_init_blacklist_if(const char* prefix, unsigned int len);
ZTS_API int ZTCALL zts_init_set_roots(const void* roots_data, unsigned int len);
ZTS_API int ZTCALL zts_init_set_port(unsigned short port);
ZTS_API int ZTCALL zts_init_set_random_port_range(unsigned short start_port, unsigned short end_port);
ZTS_API int ZTCALL zts_init_allow_secondary_port(unsigned int allowed);
ZTS_API int ZTCALL zts_init_allow_port_mapping(unsigned int allowed);
ZTS_API int ZTCALL zts_init_allow_net_cache(unsigned int allowed);
ZTS_API int ZTCALL zts_init_allow_peer_cache(unsigned int allowed);
ZTS_API int ZTCALL zts_node_start();
ZTS_API int ZTCALL zts_node_get_id_pair(char* key, unsigned int* key_dst_len);