pkg/crate/libzt/src/libzt.rs

#[doc = " Callback message"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_event_msg_t {
    #[doc = " Event identifier"]
    pub event_code: i16,
    #[doc = " Node status"]
    pub node: *mut zts_node_info_t,
    #[doc = " Network information"]
    pub network: *mut zts_net_info_t,
    #[doc = " Netif status"]
    pub netif: *mut zts_netif_info_t,
    #[doc = " Managed routes"]
    pub route: *mut zts_route_info_t,
    #[doc = " Peer info"]
    pub peer: *mut zts_peer_info_t,
    #[doc = " Assigned address"]
    pub addr: *mut zts_addr_info_t,
    #[doc = " Binary data (identities, planets, network configs, peer hints, etc)"]
    pub cache: *mut ::std::os::raw::c_void,
    #[doc = " Length of data message or structure"]
    pub len: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_zts_event_msg_t() {
    assert_eq!(
        ::std::mem::size_of::<zts_event_msg_t>(),
        72usize,
        concat!("Size of: ", stringify!(zts_event_msg_t))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_event_msg_t>(),
        8usize,
        concat!("Alignment of ", stringify!(zts_event_msg_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_event_msg_t>())).event_code as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_event_msg_t),
            "::",
            stringify!(event_code)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_event_msg_t>())).node as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_event_msg_t),
            "::",
            stringify!(node)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_event_msg_t>())).network as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_event_msg_t),
            "::",
            stringify!(network)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_event_msg_t>())).netif as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_event_msg_t),
            "::",
            stringify!(netif)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_event_msg_t>())).route as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_event_msg_t),
            "::",
            stringify!(route)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_event_msg_t>())).peer as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_event_msg_t),
            "::",
            stringify!(peer)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_event_msg_t>())).addr as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_event_msg_t),
            "::",
            stringify!(addr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_event_msg_t>())).cache as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_event_msg_t),
            "::",
            stringify!(cache)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_event_msg_t>())).len as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_event_msg_t),
            "::",
            stringify!(len)
        )
    );
}
extern "C" {
    #[doc = " @brief Generates a node identity (public/secret key-pair) and stores it in a"]
    #[doc = "     user-provided buffer."]
    #[doc = ""]
    #[doc = " @param key User-provided destination buffer"]
    #[doc = " @param key_buf_len Length of user-provided destination buffer. Will be set"]
    #[doc = "     to the number of bytes copied."]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_id_new(
        key: *mut ::std::os::raw::c_char,
        key_buf_len: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Verifies that a key-pair is valid. Checks formatting and pairing of"]
    #[doc = "    key to address."]
    #[doc = ""]
    #[doc = " @param key Buffer containing key-pair"]
    #[doc = " @param len Length of key-pair buffer"]
    #[doc = " @return `1` if true, `0` if false."]
    pub fn zts_id_pair_is_valid(
        key: *const ::std::os::raw::c_char,
        len: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Instruct ZeroTier to look for node identity files at the given location. This is an"]
    #[doc = " initialization function that can only be called before `zts_node_start()`."]
    #[doc = ""]
    #[doc = " Note that calling this function is not mandatory and if it is not called the node's keys will be"]
    #[doc = " kept in memory and retrievable via `zts_node_get_id_pair()`."]
    #[doc = ""]
    #[doc = " See also: `zts_init_from_memory()`"]
    #[doc = ""]
    #[doc = " @param port Path Null-terminated file-system path string"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_from_storage(path: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Instruct ZeroTier to use the identity provided in `key`. This is an initialization"]
    #[doc = " function that can only be called before `zts_node_start()`."]
    #[doc = ""]
    #[doc = " Note that calling this function is not mandatory and if it is not called the node's keys will be"]
    #[doc = " kept in memory and retrievable via `zts_node_get_id_pair()`."]
    #[doc = ""]
    #[doc = " See also: `zts_init_from_storage()`"]
    #[doc = ""]
    #[doc = " @param key Path Null-terminated file-system path string"]
    #[doc = " @param len Length of `key` buffer"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_from_memory(
        key: *const ::std::os::raw::c_char,
        len: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zts_init_set_event_handler(
        callback: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Blacklist an interface prefix (or name). This prevents ZeroTier from"]
    #[doc = " sending traffic over matching interfaces. This is an initialization function that can"]
    #[doc = " only be called before `zts_node_start()`."]
    #[doc = ""]
    #[doc = " @param prefix Null-terminated interface prefix string"]
    #[doc = " @param len Length of prefix string"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_blacklist_if(
        prefix: *const ::std::os::raw::c_char,
        len: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Present a root set definition for ZeroTier to use instead of the default."]
    #[doc = " This is an initialization function that can only be called before `zts_node_start()`."]
    #[doc = ""]
    #[doc = " @param roots_data Array of roots definition data (binary)"]
    #[doc = " @param len Length of binary data"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_set_roots(
        roots_data: *const ::std::os::raw::c_void,
        len: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the port to which the node should bind. This is an initialization function that can"]
    #[doc = " only be called before `zts_node_start()`."]
    #[doc = ""]
    #[doc = " @param port Port number"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_set_port(port: ::std::os::raw::c_ushort) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set range that random ports will be selected from. This is an initialization function that can"]
    #[doc = " only be called before `zts_node_start()`."]
    #[doc = ""]
    #[doc = " @param start_port Start of port range"]
    #[doc = " @param end_port End of port range"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_set_random_port_range(
        start_port: ::std::os::raw::c_ushort,
        end_port: ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Allow or disallow ZeroTier from automatically selecting a backup port to help get through"]
    #[doc = " buggy NAT. This is enabled by default. This port is randomly chosen and should be disabled if you"]
    #[doc = " want to control exactly which ports ZeroTier talks on and (iff) you know with absolute certainty"]
    #[doc = " that traffic on your chosen primary port is allowed. This is an initialization function that can"]
    #[doc = " only be called before `zts_node_start()`."]
    #[doc = ""]
    #[doc = " @param port Port number"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_allow_secondary_port(allowed: ::std::os::raw::c_uint) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Allow or disallow the use of port-mapping. This is enabled by default. This is an"]
    #[doc = " initialization function that can only be called before `zts_node_start()`."]
    #[doc = ""]
    #[doc = " @param port Port number"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_allow_port_mapping(allowed: ::std::os::raw::c_uint) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Enable or disable whether the node will cache network details"]
    #[doc = " (enabled by default when `zts_init_from_storage()` is used.) Must be called before"]
    #[doc = " `zts_node_start()`."]
    #[doc = ""]
    #[doc = " This can potentially shorten (startup) times between node restarts. This allows the service to"]
    #[doc = " nearly instantly inform the network stack of an address to use for this peer"]
    #[doc = " so that it can create a transport service. This can be disabled for cases where one"]
    #[doc = " may not want network config details to be written to storage. This is"]
    #[doc = " especially useful for situations where address assignments do not change"]
    #[doc = " often."]
    #[doc = ""]
    #[doc = " See also: `zts_init_allow_peer_cache()`"]
    #[doc = ""]
    #[doc = " @param enabled Whether or not this feature is enabled"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_allow_net_cache(allowed: ::std::os::raw::c_uint) -> ::std::os::raw::c_int;
}
